--- a/assets/css/square.css
+++ b/assets/css/square.css
@@ -1,9 +1,10 @@
 .square {
-    /* padding: 5em; */
-    width: 15em;
-    height: 10em;
+    width: 5em;
+    height: 5em;
     margin: 1rem;
     background: #eee;
     border-radius: 6px;
     border-color: #2f2d2d;
+    color: black;
+    font-size: 20px;
 }
